--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://185.113.143.51:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=luxrestpwd
 #This creates tables in the database from models
