--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ application.security.jwt.refresh-token.expiration=604800000
 
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+server.ssl.certificate-private-key=classpath:certs/key.pem
+server.ssl.certificate=classpath:certs/cert.pem
+
+server.ssl.enabled=true
