--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=luxrestpwd
 spring.datasource.driver-class-name=org.postgresql.Driver
 #This creates tables in the database from models
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -20,3 +20,5 @@ server.ssl.certificate-private-key=classpath:certs/key.pem
 server.ssl.certificate=classpath:certs/cert.pem
 
 server.ssl.enabled=true
+
+logging.level.root=WARN
